# CodingTests

./: .gitignore  README.md
.circleci/: config.yml
SuckerPunch/: Queue.cpp  Queue.h  README.md  SuckerPunch.1  SuckerPunch.sln  SuckerPunch.vcproj  TESTING.md  UpgradeLog.htm  main.cpp  stdafx.h
SuckerPunch.xcodeproj/: project.pbxproj
SuckerPunch/SuckerPunch/: Queue.cpp  Queue.h  SuckerPunch.vcxproj  SuckerPunch.vcxproj.filters  main.cpp  stdafx.cpp
SuckerPunch/SuckerPunch.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
SuckerPunch/SuckerPunch/test/: CMakeLists.txt  README.md  example-html-details.main.cpp.html  main.cpp  test_detail.xml  test_log.txt
SuckerPunch/SuckerPunch/test/.circleci/: config.yml
SuckerPunch/TestResults/0169c97b-9c95-4772-a3a0-8c9fdd1e8c90/: nipoulad_NIPOULAD_LAPTOP 2020-05-06 22_45_47.coverage
SuckerPunch/TestResults/1e89158e-4cbe-4e6d-a8dc-e58f10ebad66/: nipoulad_NIPOULAD_LAPTOP 2020-05-06 19_41_30.coverage
SuckerPunch/TestResults/3d81e4b2-e125-4aa8-89d7-adefaa4e8e47/: nipoulad_NIPOULAD_LAPTOP 2020-05-06 18_59_42.coverage
SuckerPunch/TestResults/68af8cb3-15f7-4b2f-8ea4-c76d7146f107/: nipoulad_NIPOULAD_LAPTOP 2020-05-06 19_45_58.coverage
SuckerPunch/TestResults/885e4595-013f-4808-8fd0-ab10d65b17d5/: nipoulad_NIPOULAD_LAPTOP 2020-05-06 22_43_41.coverage
SuckerPunch/TestResults/91acb45d-0f12-4bce-b24f-c96df58e856f/: nipoulad_NIPOULAD_LAPTOP 2020-05-06 19_43_48.coverage
SuckerPunch/Testing/: Testing.cpp  Testing.vcxproj  Testing.vcxproj.filters
(+8 files in other folders)
